@startuml

title __MANAGER's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    namespace manager {
      class pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAKeyStoreManager {
          + LongTermCAKeyStoreManager()
          + addNode()
          + createKeyStoreWithCACertificates()
          + registerOrchestrator()
          + registerProver()
          + registerVerifier()
          + signCsr()
          # keyStoreInputStream()
          # keyStoreOutputStream()
          - createCaNode()
          - createCertificates()
          - createIntermediateCa()
          - createIntermediateCa()
          - exportKeyStores()
          - getExtensionAuthorityKeyIdentifier()
          - getExtensionBasicConstraints()
          - getExtensionKeyUsage()
          - isRootCa()
          - keyStoreFile()
          - managerEntity()
          - managerLog()
          - managerProperty()
          - registerByCsr()
          - registerByCsr()
          - registerByCsr()
          - setCertificateEntry()
          - setCertificateEntry()
          - setKeyEntry()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    namespace manager {
      class pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCALogManager {
          - logger : Logger
          + LongTermCALogManager()
          + afterLoading()
          + beforeLoading()
          + debug()
          + error()
          + info()
          + warning()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    namespace manager {
      class pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager {
          + LongTermCAManager()
          + entity()
          + keyStore()
          + log()
          + nonce()
          + property()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    namespace manager {
      class pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAPropertyManager {
          {static} - FILE_PATH : String
          + LongTermCAPropertyManager()
          + beforeLoading()
      }
    }
  }
  

  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAKeyStoreManager -up-|> pt.ulisboa.tecnico.surespace.common.manager.KeyStoreManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAKeyStoreManager o-- pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager : manager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCALogManager -up-|> pt.ulisboa.tecnico.surespace.common.manager.LogManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager .up.|> pt.ulisboa.tecnico.surespace.common.manager.GlobalManagerInterface
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager o-- pt.ulisboa.tecnico.surespace.common.manager.EntityManager : entityManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager o-- pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAKeyStoreManager : keyStoreManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager o-- pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCALogManager : logManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager o-- pt.ulisboa.tecnico.surespace.common.manager.NonceManager : nonceManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAManager o-- pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAPropertyManager : propertyManager
  pt.ulisboa.tecnico.surespace.long_term_ca.manager.LongTermCAPropertyManager -up-|> pt.ulisboa.tecnico.surespace.common.manager.PropertyManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
